--- a/Translation/en/RedirectedResources/assets/abdata/adv/scenario/op/30/00/0/zz_machineTranslation.txt
+++ b/Translation/en/RedirectedResources/assets/abdata/adv/scenario/op/30/00/0/zz_machineTranslation.txt
@@ -6,7 +6,7 @@
 畏まりました。　では、まずは当店のご説明をさせて頂きます。=Understood. Then, first of all, I will explain our store.
 当店は、お客様の理想のパートナーを見つけて頂く場となっております。=Our store is a place where you can find your ideal partner.
 大人である以上、どういった行動で互いを示していくかはお判りですよね？=As adults, you know what kind of behavior you will show each other, right?
-勿論お呼びされる娘達は、自分の身に何が起きるかを理解した上でお客様と出会う事でしょう。=Of course, the girls who are invited to the dating with the customer already understands what will happen to them.
+勿論お呼びされる娘達は、自分の身に何が起きるかを理解した上でお客様と出会う事でしょう。=Of course, the girls invited to the dating with the customer already understand what will happen to them.
 彼女達の望む姿となるか、欲望を満たすだけの存在となるか……全てはお客様次第となっております。=You can be what they want you to be, or you can be just what they want you to be... It's all up to you.
 そういった行動に必要な施設や道具の利用費については既にご精算済みとなっておりますので、ご自由にお使い下さいませ。=We have already been paid for the use of the facilities and tools necessary for such activities, so please feel free to use them as you wish.
 続きましてお客様のお部屋をご紹介させて頂きます、どうぞこちらへ。=Next, I would like to introduce you to your room, please click here.
