--- a/Translation/en/RedirectedResources/assets/abdata/adv/scenario/op/30/01/0/zz_machineTranslation.txt
+++ b/Translation/en/RedirectedResources/assets/abdata/adv/scenario/op/30/01/0/zz_machineTranslation.txt
@@ -2,6 +2,6 @@
 //WARNING: This file is only for machine translations! Put manual translations in "translation.txt"
 //***********************************************************************
 
-パートナーと出会う為には、お好みのパートナーカードをグループへと登録して頂く必要がございます。=In order to meet a partner, you need to register your preferred partner card to the group.
-尚、１つのグループに対して登録できる人数は決まっておりますのでご注意ください。=Please note that there is a limit to the number of people who can register for one group.
-グループへの登録が完了致しましたら、パートナーと出会う準備は完了となります。=Once you have registered with the group, you are ready to meet your partner.
+パートナーと出会う為には、お好みのパートナーカードをグループへと登録して頂く必要がございます。=In order to meet a partner, you need to assign your preferred partner card to the group.
+尚、１つのグループに対して登録できる人数は決まっておりますのでご注意ください。=Please note that there is a limit to the number of people whom you can assign to one group.
+グループへの登録が完了致しましたら、パートナーと出会う準備は完了となります。=Once you have assigned your partner to a group, you are ready to meet them.
